--- a/codes/XGB_FraudDetection.ipynb
+++ b/codes/XGB_FraudDetection.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,10 +138,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+----+--------------------------+\n",
+      "| ip|day|hour|*ip_day_hour_count_channel|\n",
+      "+---+---+----+--------------------------+\n",
+      "|  9|  7|  16|                         1|\n",
+      "| 10|  7|   1|                         1|\n",
+      "| 10|  7|   7|                         1|\n",
+      "| 10|  8|  11|                         1|\n",
+      "| 19|  8|   9|                         1|\n",
+      "+---+---+----+--------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gp = data.select(\"ip\",\"day\",\"hour\", \"channel\")\\\n",
+    "               .groupBy(\"ip\",\"day\",\"hour\")\\\n",
+    "               .agg({\"channel\":\"count\"})\\\n",
+    "               .withColumnRenamed(\"count(channel)\", \"*ip_day_hour_count_channel\")\\\n",
+    "               .sort(col(\"ip\"))\n",
+    "gp.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df3 = data.join(gp, 'ip', \"outer\")\n",
+    "# a\n",
+    "# df3.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -438,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.0"
   },
   "name": "FraudDetection_RF_XGB",
   "notebookId": 404476875724424
