--- a/codes/XGB_FraudDetection.ipynb
+++ b/codes/XGB_FraudDetection.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,17 +181,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+----+---+------+---+-------+-------------------+---------------+-------------+--------------------------+\n",
+      "| ip|day|hour|app|device| os|channel|         click_time|attributed_time|is_attributed|*ip_day_hour_count_channel|\n",
+      "+---+---+----+---+------+---+-------+-------------------+---------------+-------------+--------------------------+\n",
+      "|  9|  7|  16|  9|     1| 13|    244|2017-11-07 16:06:42|           null|            0|                         1|\n",
+      "| 10|  7|   7| 12|     1| 19|    140|2017-11-07 07:33:04|           null|            0|                         1|\n",
+      "| 10|  7|   1| 11|     1| 22|    319|2017-11-07 01:37:19|           null|            0|                         1|\n",
+      "| 10|  8|  11| 18|     1| 13|    107|2017-11-08 11:19:15|           null|            0|                         1|\n",
+      "| 19|  8|   9| 14|     1| 16|    379|2017-11-08 09:12:26|           null|            0|                         1|\n",
+      "| 20|  9|   3|  2|     1| 16|    469|2017-11-09 03:46:51|           null|            0|                         1|\n",
+      "| 20|  8|   8| 18|     1| 19|    107|2017-11-08 08:13:41|           null|            0|                         1|\n",
+      "| 20|  8|   0| 12|     1| 13|    277|2017-11-08 00:27:27|           null|            0|                         1|\n",
+      "| 20|  8|   3|  2|     1|  9|    469|2017-11-08 03:06:02|           null|            0|                         1|\n",
+      "| 25|  7|  11|  3|     1| 23|    417|2017-11-07 11:16:56|           null|            0|                         1|\n",
+      "| 27|  9|   6|  1|     1|  9|    439|2017-11-09 06:47:36|           null|            0|                         1|\n",
+      "| 27|  8|  10| 18|     1| 19|    439|2017-11-08 10:20:19|           null|            0|                         2|\n",
+      "| 27|  8|  10|  9|     1| 19|    334|2017-11-08 10:21:33|           null|            0|                         2|\n",
+      "| 27|  9|   4| 18|  3866|866|    107|2017-11-09 04:19:06|           null|            0|                         1|\n",
+      "| 27|  7|   4|  2|     1| 17|    377|2017-11-07 04:43:13|           null|            0|                         1|\n",
+      "| 31|  7|  12| 26|     1|  2|    121|2017-11-07 12:31:15|           null|            0|                         1|\n",
+      "| 33|  8|  10| 12|     1| 20|    259|2017-11-08 10:41:11|           null|            0|                         1|\n",
+      "| 36|  9|   8| 21|     1| 19|    128|2017-11-09 08:41:40|           null|            0|                         1|\n",
+      "| 36|  9|  15|  7|     1| 13|    101|2017-11-09 15:08:23|           null|            0|                         1|\n",
+      "| 36|  9|   7|  3|     1| 19|    182|2017-11-09 07:02:56|           null|            0|                         1|\n",
+      "+---+---+----+---+------+---+-------+-------------------+---------------+-------------+--------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.join(gp, [\"ip\",\"day\",\"hour\"])\\\n",
+    "         .sort(col(\"ip\"))\n",
+    "data.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   },
   "name": "FraudDetection_RF_XGB",
   "notebookId": 404476875724424
