--- a/Code/XGBoost/Part_01_EDA_Pyspark.ipynb
+++ b/Code/XGBoost/Part_01_EDA_Pyspark.ipynb
@@ -742,7 +742,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8014067e20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f847c7025e0>"
       ]
      },
      "execution_count": 30,
@@ -848,33 +848,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transformer(x):\n",
+    "    x = pow(x, (0.05))\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import pow, col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'map'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-0732b5ccb69a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRDD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'app'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/spark/python/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1398\u001b[0m         \"\"\"\n\u001b[1;32m   1399\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1400\u001b[0;31m             raise AttributeError(\n\u001b[0m\u001b[1;32m   1401\u001b[0m                 \"'%s' object has no attribute '%s'\" % (self.__class__.__name__, name))\n\u001b[1;32m   1402\u001b[0m         \u001b[0mjc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'map'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------------------+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "| ip|               app|channel| os|day|hour|device|         click_time|attributed_time|is_attributed|*ip_day_hour_count_channel|*ip_app_count_channel|*ip_app_os_count_channel|*ip_app_channel_mean_hour|\n",
+      "+---+------------------+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "|  9|1.1161231740339044|    244| 13|  7|  16|     1|2017-11-07 16:06:42|           null|            0|                         1|                    1|                       1|                     16.0|\n",
+      "| 10| 1.127378204157833|    319| 22|  7|   1|     1|2017-11-07 01:37:19|           null|            0|                         1|                    1|                       1|                      1.0|\n",
+      "+---+------------------+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "a = RDD.select('app').map(lambda x:(x,1))"
+    "RDD.withColumn('app', transformer('app')).\\\n",
+    "    show(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "| ip|app|channel| os|day|hour|device|         click_time|attributed_time|is_attributed|*ip_day_hour_count_channel|*ip_app_count_channel|*ip_app_os_count_channel|*ip_app_channel_mean_hour|\n",
+      "+---+---+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "|  9|  9|    244| 13|  7|  16|     1|2017-11-07 16:06:42|           null|            0|                         1|                    1|                       1|                     16.0|\n",
+      "| 10| 11|    319| 22|  7|   1|     1|2017-11-07 01:37:19|           null|            0|                         1|                    1|                       1|                      1.0|\n",
+      "| 10| 18|    107| 13|  8|  11|     1|2017-11-08 11:19:15|           null|            0|                         1|                    1|                       1|                     11.0|\n",
+      "| 10| 12|    140| 19|  7|   7|     1|2017-11-07 07:33:04|           null|            0|                         1|                    1|                       1|                      7.0|\n",
+      "| 19| 14|    379| 16|  8|   9|     1|2017-11-08 09:12:26|           null|            0|                         1|                    1|                       1|                      9.0|\n",
+      "+---+---+-------+---+---+----+------+-------------------+---------------+-------------+--------------------------+---------------------+------------------------+-------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "RDD.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "# RDD.select(transformer('app')).\\\n",
+    "#     show(5)"
    ]
   },
   {
@@ -882,35 +933,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "sdf"
+   ]
   },
   {
    "cell_type": "code",
@@ -1044,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   },
   "name": "FraudDetection_RF_XGB",
   "notebookId": 404476875724424
