--- a/Code/RandomForest/RF_FraudDetection.ipynb
+++ b/Code/RandomForest/RF_FraudDetection.ipynb
@@ -10,8 +10,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-26T04:43:46.230438600Z",
+     "start_time": "2023-09-26T04:43:46.143526Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpyspark\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mml\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Pipeline\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpyspark\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mml\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mclassification\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m RandomForestClassifier\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpyspark\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mml\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mevaluation\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m MulticlassClassificationEvaluator\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'pyspark'"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.classification import RandomForestClassifier\n",
@@ -57,9 +74,7 @@
       "| 35810|  3|     1| 13|    379|2017-11-06 14:34:12|           null|            0|\n",
       "| 45745| 14|     1| 13|    478|2017-11-06 14:34:52|           null|            0|\n",
       "|161007|  3|     1| 13|    379|2017-11-06 14:35:08|           null|            0|\n",
-      "+------+---+------+---+-------+-------------------+---------------+-------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+------+---+------+---+-------+-------------------+---------------+-------------+\n"
      ]
     }
    ],
@@ -90,8 +105,7 @@
       "|    ip|app|device| os|channel|click_time|attributed_time|is_attributed|\n",
       "+------+---+------+---+-------+----------+---------------+-------------+\n",
       "|277396|706|  3475|800|    202|    259620|         182057|            2|\n",
-      "+------+---+------+---+-------+----------+---------------+-------------+\n",
-      "\n"
+      "+------+---+------+---+-------+----------+---------------+-------------+\n"
      ]
     }
    ],
@@ -113,8 +127,7 @@
       "+-------------+---------+\n",
       "|            1|   456846|\n",
       "|            0|184447044|\n",
-      "+-------------+---------+\n",
-      "\n"
+      "+-------------+---------+\n"
      ]
     }
    ],
@@ -173,9 +186,7 @@
       "|83230|  3|     1| 13|    379|2017-11-06 14:32:21|           null|            0|\n",
       "|17357|  3|     1| 19|    379|2017-11-06 14:33:34|           null|            0|\n",
       "|35810|  3|     1| 13|    379|2017-11-06 14:34:12|           null|            0|\n",
-      "+-----+---+------+---+-------+-------------------+---------------+-------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+-----+---+------+---+-------+-------------------+---------------+-------------+\n"
      ]
     }
    ],
@@ -209,8 +220,7 @@
       "+-------------+---------+\n",
       "|            1|184108938|\n",
       "|            0|184447044|\n",
-      "+-------------+---------+\n",
-      "\n"
+      "+-------------+---------+\n"
      ]
     }
    ],
@@ -248,8 +258,7 @@
       "+-------------+---------+\n",
       "|            1|184108938|\n",
       "|            0|184447044|\n",
-      "+-------------+---------+\n",
-      "\n"
+      "+-------------+---------+\n"
      ]
     }
    ],
@@ -270,8 +279,7 @@
       "|    ip|app|device| os|channel|click_time|attributed_time|is_attributed|\n",
       "+------+---+------+---+-------+----------+---------------+-------------+\n",
       "|277396|706|  3475|800|    202|    259620|         182057|            2|\n",
-      "+------+---+------+---+-------+----------+---------------+-------------+\n",
-      "\n"
+      "+------+---+------+---+-------+----------+---------------+-------------+\n"
      ]
     }
    ],
@@ -301,9 +309,7 @@
       "|83230|  3|     1| 13|    379|            0|\n",
       "|17357|  3|     1| 19|    379|            0|\n",
       "|35810|  3|     1| 13|    379|            0|\n",
-      "+-----+---+------+---+-------+-------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+-----+---+------+---+-------+-------------+\n"
      ]
     }
    ],
@@ -364,8 +370,7 @@
       " |-- device: integer (nullable = true)\n",
       " |-- os: integer (nullable = true)\n",
       " |-- channel: integer (nullable = true)\n",
-      " |-- is_attributed: integer (nullable = true)\n",
-      "\n"
+      " |-- is_attributed: integer (nullable = true)\n"
      ]
     }
    ],
@@ -388,9 +393,7 @@
       "|  9|  3|     1| 13|    115|            0|\n",
       "|  9|  3|     1| 13|    135|            0|\n",
       "|  9|  3|     1| 13|    280|            0|\n",
-      "+---+---+------+---+-------+-------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+---+---+------+---+-------+-------------+\n"
      ]
     }
    ],
@@ -451,9 +454,7 @@
       "|  9|  3|     1| 13|    115|            0|[9.0,3.0,1.0,13.0...|\n",
       "|  9|  3|     1| 13|    135|            0|[9.0,3.0,1.0,13.0...|\n",
       "|  9|  3|     1| 13|    280|            0|[9.0,3.0,1.0,13.0...|\n",
-      "+---+---+------+---+-------+-------------+--------------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+---+---+------+---+-------+-------------+--------------------+\n"
      ]
     }
    ],
@@ -519,8 +520,7 @@
       " |-- features: vector (nullable = true)\n",
       " |-- rawPrediction: vector (nullable = true)\n",
       " |-- probability: vector (nullable = true)\n",
-      " |-- prediction: double (nullable = false)\n",
-      "\n"
+      " |-- prediction: double (nullable = false)\n"
      ]
     }
    ],
@@ -545,9 +545,7 @@
       "|       0.0|            0|[9.0,3.0,1.0,13.0...|\n",
       "|       0.0|            0|[9.0,3.0,1.0,13.0...|\n",
       "|       0.0|            0|[9.0,9.0,1.0,13.0...|\n",
-      "+----------+-------------+--------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+----------+-------------+--------------------+\n"
      ]
     }
    ],
@@ -639,9 +637,7 @@
       "|       2| 72287| 21|     1| 19|    128|2017-11-10 04:00:00|\n",
       "|       3| 78477| 15|     1| 13|    111|2017-11-10 04:00:00|\n",
       "|       4|123080| 12|     1| 13|    328|2017-11-10 04:00:00|\n",
-      "+--------+------+---+------+---+-------+-------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "+--------+------+---+------+---+-------+-------------------+\n"
      ]
     }
    ],
@@ -665,9 +661,7 @@
       "|       0|  5744|  9|     1|  3|    107|2017-11-10 04:00:00|\n",
       "|       1|119901|  9|     1|  3|    466|2017-11-10 04:00:00|\n",
       "|       2| 72287| 21|     1| 19|    128|2017-11-10 04:00:00|\n",
-      "+--------+------+---+------+---+-------+-------------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+--------+------+---+------+---+-------+-------------------+\n"
      ]
     }
    ],
@@ -710,9 +704,7 @@
       "|       0|  5744|  9|     1|  3|    107|2017-11-10 04:00:00|[5744.0,9.0,1.0,3...|\n",
       "|       1|119901|  9|     1|  3|    466|2017-11-10 04:00:00|[119901.0,9.0,1.0...|\n",
       "|       2| 72287| 21|     1| 19|    128|2017-11-10 04:00:00|[72287.0,21.0,1.0...|\n",
-      "+--------+------+---+------+---+-------+-------------------+--------------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+--------+------+---+------+---+-------+-------------------+--------------------+\n"
      ]
     }
    ],
@@ -750,9 +742,7 @@
       "+--------+------+---+------+---+-------+-------------------+--------------------+--------------------+--------------------+----------+\n",
       "|       0|  5744|  9|     1|  3|    107|2017-11-10 04:00:00|[5744.0,9.0,1.0,3...|[20.6742278268919...|[0.68914092756306...|       0.0|\n",
       "|       1|119901|  9|     1|  3|    466|2017-11-10 04:00:00|[119901.0,9.0,1.0...|[24.8633981858914...|[0.82877993952971...|       0.0|\n",
-      "+--------+------+---+------+---+-------+-------------------+--------------------+--------------------+--------------------+----------+\n",
-      "only showing top 2 rows\n",
-      "\n"
+      "+--------+------+---+------+---+-------+-------------------+--------------------+--------------------+--------------------+----------+\n"
      ]
     }
    ],
@@ -782,9 +772,7 @@
       "|       0|       0.0|\n",
       "|       1|       0.0|\n",
       "|       2|       1.0|\n",
-      "+--------+----------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+--------+----------+\n"
      ]
     }
    ],
@@ -808,9 +796,7 @@
       "|       0|          0.0|\n",
       "|       1|          0.0|\n",
       "|       2|          1.0|\n",
-      "+--------+-------------+\n",
-      "only showing top 3 rows\n",
-      "\n"
+      "+--------+-------------+\n"
      ]
     }
    ],
@@ -840,8 +826,7 @@
       "+-------------+--------+\n",
       "|          0.0|15921222|\n",
       "|          1.0| 2869247|\n",
-      "+-------------+--------+\n",
-      "\n"
+      "+-------------+--------+\n"
      ]
     }
    ],
